--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/multer": "^1.4.7",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/parser": "^4.30.0",
     "eslint": "^7.32.0",
@@ -22,8 +23,10 @@
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "csv-parse": "^4.16.3",
     "eslint-config-airbnb-base": "^14.2.1",
     "express": "^4.17.1",
+    "multer": "^1.4.3",
     "uuid": "^8.3.2"
   }
 }
