--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/multer": "^1.4.7",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/parser": "^4.30.0",
     "eslint": "^7.32.0",
@@ -27,6 +28,7 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "express": "^4.17.1",
     "multer": "^1.4.3",
+    "swagger-ui-express": "^4.1.6",
     "uuid": "^8.3.2"
   }
 }
